fixed layout bugs

--- a/webpages/css/intr2dok.css
+++ b/webpages/css/intr2dok.css
@@ -110,14 +110,13 @@ p {
 }
 
 .jumboHome {
-  height: 225px;
   border-bottom: 1px solid #bb0734;
-
 }
 .jumboHome h1 {
-    margin-top: 75px;
+  margin-top: 75px;
 }
 .jumboHome h1 img {
+  width: 100%;
 }
 .jumboHome h2 {
   margin-top: 67px;
@@ -144,9 +143,6 @@ p {
   margin-top: 17px;
 }
 
-
-
-
 #searchInput {
     color: #f3f3f3;
     background-color: #a9a9a9;
@@ -169,11 +165,20 @@ p {
     width: 60px;
     border-left: 1px solid #f3f3f3;
     border-right: 1px solid #f3f3f3;
+    float: right;
 }
 .btn-flat .fa-search {
     font-size: 20px;
 }
-
+.mir-main-nav .searchfield_box .navbar-form .btn {
+  margin-top: 0px;
+}
+.mir-main-nav .searchfield_box {
+  margin: 0px 0px 0px;
+}
+.mir-prop-nav {
+    margin: 0px 0px 0px;
+}
 .form-control::-moz-placeholder{
     color:#c3c3c3;
     color: #f3f3f3;
@@ -185,4 +190,11 @@ p {
 .form-control::-webkit-input-placeholder{
     color:#c3c3c3;
     color: #f3f3f3;
+}
+
+/* md: up to 1170 px *********************************************************/
+@media (min-width: 992px) {
+  .jumboHome {
+    height: 225px;
+  }
 }
